v0.3.1:
    - Made the oscillating cursor option work with the black box enabled.

v0.3.0:
    - Optimized the drawing routine to use as few OAM slots as possible (min 6, max 15) depending on the current box and exit disable settings. Before, it was always either 11 or 15.
    - Now the cursor actually uses the !cursor_palette (before it used !letter_palette).
    - Allow for ObjecTool custom normal objects $42-$4F along with $52-$FF, since they're never used for the custom midways (thanks to MarioFanGamer for suggesting this).
    - Added new cursor options (static, blinking, oscillating).
    - Fixed an issue with the sprite initial facing fix that sometimes caused Yoshi to run away in the wrong direction when hit by a sprite while riding him (thanks to Abdu for reporting this).
    - Fixed an issue where dying on the same frame Baby Yoshi started the growing animation would cause sprites and animation to not be frozen while the prompt is shown (thanks to LouisDoucet for reporting this).
    - Fixed an issue where dying on the same frame Yoshi started eating a berry (and maybe a normal sprite too) it would cause the game to hardlock.

v0.2.7:
    - Fixed an issue where sprites would disappear when the Retry prompt was active, in case the end of the OAM table was filled (thanks to LouisDoucet for reporting this).
    - Changed ordering on this document to list more recent versions before older ones.

v0.2.6:
    - Changed !lose_lives define to a table to enable/disable infinite lives on a sublevel basis.
    - Fixed issue where sometimes Mario would die or have weird interactions on the first frame after respawning in a layer 2 level (thanks to FYRE150 for reporting this).
    - Finished "extra.asm" routines documentation.

v0.2.5:
    - Added more support for ObjecTool, by only reserving Custom Normal Objects 00-51 for the custom midway bar, allowing to use Custom Normal Objects 52-FF in ObjecTool normally.
    - Added ObjecTool readme.

v0.2.4: