@@ -1,5 +1,6 @@
 v0.3.1:
     - Made the oscillating cursor option work with the black box enabled.
+    - Added an optional button that can trigger the "Exit" prompt function even if the exit option is disabled (thanks to Mega for the suggestion).
 
 v0.3.0:
     - Optimized the drawing routine to use as few OAM slots as possible (min 6, max 15) depending on the current box and exit disable settings. Before, it was always either 11 or 15.
